--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,3 +9,10 @@ exclude = '''
   | \.venv
 )/
 '''
+
+[build-system]
+requires = [
+    "setuptools>=42",
+    "wheel"
+]
+build-backend = "setuptools.build_meta"
