--- a/tox.ini
+++ b/tox.ini
@@ -1,22 +1,30 @@
 [tox]
 minversion=2.3.1
-envlist = py36,py37,py38,py39,black
+envlist = py36,py37,py38,py39,py310,black
 
 [testenv]
 deps =
     libcst
     pytest
-    black == 21.5b0
 commands =
     pytest tests/test_codemod.py
 
 [testenv:black]
+deps =
+    black == 21.12b0
 commands =
     black --check .
+
+[testenv:pyanalyze]
+deps =
+    pyanalyze == 0.5.0
+commands =
+    python -m pyanalyze -e missing_return_annotation -e missing_parameter_annotation autotyper
 
 [gh-actions]
 python =
     3.6: py36
     3.7: py37
     3.8: py38
-    3.9: py39, black
+    3.9: py39, black, pyanalyze
+    3.10: py310
