rename to autotyping

--- a/tox.ini
+++ b/tox.ini
@@ -19,7 +19,7 @@ commands =
 deps =
     pyanalyze == 0.5.0
 commands =
-    python -m pyanalyze -e missing_return_annotation -e missing_parameter_annotation autotyper
+    python -m pyanalyze -e missing_return_annotation -e missing_parameter_annotation autotyping
 
 [gh-actions]
 python =
