--- a/.libcst.codemod.yaml
+++ b/.libcst.codemod.yaml
@@ -11,7 +11,7 @@ blacklist_patterns: []
 # List of modules that contain codemods inside of them.
 modules:
 - 'libcst.codemod.commands'
-- 'autotyper'
+- 'autotyping'
 # Absolute or relative path of the repository root, used for providing
 # full-repo metadata. Relative paths should be specified with this file
 # location as the base.
