--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion=2.3.1
-envlist = py36,py37,py38,py39,py310,black
+envlist = py36,py37,py38,py39,py310,black,pyanalyze
 
 [testenv]
 deps =
