--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion=2.3.1
-envlist = py36,py37,py38,py39,py310,black,pyanalyze
+envlist = py36,py37,py38,py39,py310,py311,black,pyanalyze
 
 [testenv]
 deps =
@@ -11,13 +11,13 @@ commands =
 
 [testenv:black]
 deps =
-    black == 21.12b0
+    black == 22.6.0
 commands =
     black --check .
 
 [testenv:pyanalyze]
 deps =
-    pyanalyze == 0.5.0
+    pyanalyze == 0.7.0
 commands =
     python -m pyanalyze -e missing_return_annotation -e missing_parameter_annotation autotyping
 
@@ -28,3 +28,4 @@ python =
     3.8: py38
     3.9: py39, black, pyanalyze
     3.10: py310
+    3.11-dev: py311
