--- a/tox.ini
+++ b/tox.ini
@@ -11,21 +11,20 @@ commands =
 
 [testenv:black]
 deps =
-    black == 22.8.0
+    black == 22.12.0
 commands =
     black --check .
 
 [testenv:pyanalyze]
 deps =
-    pyanalyze == 0.7.0
+    pyanalyze == 0.8.0
 commands =
-    python -m pyanalyze -e missing_return_annotation -e missing_parameter_annotation autotyping
+    python -m pyanalyze --config pyproject.toml -v autotyping
 
 [gh-actions]
 python =
-    3.6: py36
     3.7: py37
     3.8: py38
-    3.9: py39, black, pyanalyze
-    3.10: py310
-    3.11-dev: py311
+    3.9: py39
+    3.10: py310, black, pyanalyze
+    3.11: py311
