--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion=2.3.1
-envlist = py37,py38,py39,py310,py311,black,pyanalyze
+envlist = py38,py39,py310,py311,black,pyanalyze
 
 [testenv]
 deps =
@@ -23,7 +23,6 @@ commands =
 
 [gh-actions]
 python =
-    3.7: py37
     3.8: py38
     3.9: py39
     3.10: py310, black, pyanalyze
