--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 minversion=2.3.1
-envlist = py38,py39,py310,py311,black,pyanalyze
+envlist = py38,py39,py310,py311,py312,black,pyanalyze
 
 [testenv]
 deps =
@@ -27,3 +27,4 @@ python =
     3.9: py39
     3.10: py310, black, pyanalyze
     3.11: py311
+    3.12: py312
