--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,8 @@
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
-
 [project]
 name = "autotyping"
-dynamic = ["version"]
+version = "23.3.0"
 description = "A tool for autoadding simple type annotations."
 readme = "README.md"
-license = "MIT"
 requires-python = ">=3.8"
 authors = [
     { name = "Jelle Zijlstra", email = "jelle.zijlstra@gmail.com" },
@@ -34,17 +29,16 @@ dependencies = [
     "libcst",
 ]
 
+[project.scripts]
+autotyping = "autotyping.__main__:main"
+
 [project.urls]
 "Bug Tracker" = "https://github.com/JelleZijlstra/autotyping/issues"
 Homepage = "https://github.com/JelleZijlstra/autotyping"
 
-[tool.hatch.version]
-path = "autotyping/__init__.py"
-
-[tool.hatch.build.targets.sdist]
-include = [
-    "/autotyping",
-]
+[build-system]
+requires = ["setuptools>=69", "wheel"]
+build-backend = "setuptools.build_meta"
 
 [tool.black]
 target_version = ['py38', 'py39', 'py310', 'py311', 'py312']
@@ -64,4 +58,3 @@ skip_magic_trailing_comma = true
 missing_parameter_annotation = true
 missing_return_annotation = true
 incompatible_override = true
-
