Update .pre-commit-hooks.yaml to work with new pre-commit version

--- a/.pre-commit-hooks.yaml
+++ b/.pre-commit-hooks.yaml
@@ -4,6 +4,6 @@
   entry: autotyping
   language: python
   types_or: [python, pyi]
-  args: [*]
+  args: []
   additional_dependencies: []
-  minimum_pre_commit_version: 2.9.2
+  minimum_pre_commit_version: 3.0.0
